# python-agent-template

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CODING_STANDARDS.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  SECURITY.md  pyproject.toml  shared_tasks.toml
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/actions/setup-python-env/: README.md  action.yml
.github/agents/: agentic-workflows.agent.md  security-reviewer.agent.md
.github/aw/: actions-lock.json
.github/instructions/: agentic-workflows.instructions.md  agents.instructions.md  copilot-agents.instructions.md  docs.instructions.md  python.instructions.md  scripts.instructions.md
.github/workflows/: checks.yml  codeql-analysis.yml  copilot-review.lock.yml  copilot-review.md  create-issue-command.lock.yml  create-issue-command.md  docker.yml  docs.yml  monorepo-release.yml  pr-orchestrator.yml  pr-review-comment-handler.lock.yml  pr-review-comment-handler.md  python-code-quality.yml  python-docker-build.yml  python-docker.yml  python-docs.yml  python-package-build.yml  python-release.yml  python-tests.yml  release.yml  security-review.lock.yml  security-review.md
agents/agent1/: Dockerfile  LICENSE  README.md  pyproject.toml
agents/agent1/docs/source/: agent1.rst  conf.py  index.rst
agents/agent1/src/: __init__.py  agent.py
agents/agent1/src/agent1/: __main__.py
agents/agent1/src/python_agent_template/agents/agent1/: __init__.py  __main__.py  agent.py
agents/agent1/src/python_agent_template/agents/agent1/validators/: __init__.py  blank_string_validator.py
agents/agent1/src/python_agent_template/agents/agent1/validators/errors/: __init__.py  empty_string_error.py  missing_parameter_error.py  none_not_allowed_error.py  string_type_error.py
agents/agent1/tests/: __init__.py  test_agent.py  test_blank_string_validator.py
docs/: agent-guide-template.md
docs/manual/: agent-guide-template.md  docs-build-guide.md
docs/source/: conf.py  index.rst
scripts/: check_md_code_blocks.py  generate_docs.py  run_tasks_in_agents_if_exists.py  run_tasks_in_changed_agents.py
scripts/utils/: task_utils.py
