# Portions derived from Microsoft Agent Framework (MIT license):
#   https://github.com/microsoft/agent-framework
#   https://github.com/microsoft/agent-framework/blob/main/LICENSE

[project]
name = "python-agent-template"
version = "0.1.0"
description = "Template for building Python agents with security-focused defaults."
readme = "README.md"
requires-python = ">=3.10"
license-files = ["LICENSE"]
authors = [{ name = "python-agent-template maintainers" }]
dependencies = []
urls.homepage = "https://github.com/pmalarme/python-agent-template"
urls.source = "https://github.com/pmalarme/python-agent-template/tree/main"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[dependency-groups]
dev = [
    "uv>=0.4.30",
    "poethepoet>=0.32.0",
    "pre-commit>=3.7.1",
    "flit>=3.12.0,<4",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "ruff>=0.6.9",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.1",
    "pytest-timeout>=2.3.1",
    "pytest-retry>=1.6.3",
    "mypy>=1.11.2",
    "pyright>=1.1.390",
    "bandit>=1.7.9",
    "types-requests>=2.32.0.20241016",
    "rich>=13.9.2",
    "pygments>=2.18.0",
    "tomli>=2.0.1",
    "tomli-w>=1.0.0",
]
docs = [
    "sphinx>=7.4,<8",
    "sphinx-autodoc-typehints>=2.2.1",
    "tomli>=2.0.1",
]

[tool.uv]
package = false
prerelease = "if-necessary-or-explicit"
environments = [
    "sys_platform == 'linux'",
    "sys_platform == 'darwin'",
    "sys_platform == 'win32'",
]

[tool.uv.workspace]
members = ["agents/*"]

[tool.ruff]
line-length = 120
target-version = "py310"
fix = true
include = ["*.py", "**/pyproject.toml", "*.ipynb"]
exclude = [
    "docs/generated/**",
    "agents/**/docs/generated/**",
    "**/.venv/**",
    "**/.uv/**",
    "**/.git/**",
    "**/.cache/**",
]
preview = true

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = [
    "ASYNC",  # async checks
    "B",      # bugbear checks
    "C4",     # comprehensions
    "DTZ",    # datetime timezone
    "CPY",    # copyright
    "D",      # pydocstyle checks
    "E",      # pycodestyle error checks
    "ERA",    # eradicate commented-out code
    "F",      # pyflakes checks
    "FIX",    # fixme checks
    "I",      # isort
    "ICN",    # import conventions
    "INP",    # implicit namespace package
    "ISC",    # implicit string concat
    "N",      # naming
    "PGH",    # pygrep-hooks
    "Q",      # flake8-quotes checks
    "RET",    # flake8-return
    "RSE",    # raise exception parentheses
    "PLC",    # pylint conventions
    "PLE",    # pylint errors
    "PLR",    # pylint refactors
    "PLW",    # pylint warnings
    "RUF",    # ruff-specific rules
    "SIM",    # simplify
    "PT",     # pytest style
    "T20",    # Print checks
    "TD",     # todos
    "TRY",    # exception handling patterns
    "UP",     # pyupgrade rules
    "W",      # pycodestyle warnings
    "T10",    # debugger
    "S",      # Bandit checks
]
ignore = [
    "D100",  # allow missing docstring in public modules
    "D104",  # allow missing docstring in public packages
    "D418",  # allow overload to have a docstring
    "TD003", # allow missing link to todo issue
    "FIX002",# allow todo
    "B027",  # allow empty non-abstract method in abstract base classes
    "CPY",   # temp: skip copyright check until headers are standardized
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S101", "PLR2004"]
"*.ipynb" = ["CPY", "E501"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"

# Optional: enforce a project-wide copyright header. Uncomment and set notice-rgx when ready.
# [tool.ruff.lint.flake8-copyright]
# notice-rgx = "^# Copyright \(c\) Your Org\. All rights reserved\."
# min-file-size = 1

[tool.pytest.ini_options]
testpaths = 'agents/**/tests'
addopts = "-ra -q -r fEX"
filterwarnings = []
timeout = 120
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = []

[tool.coverage.run]
omit = ["**/__init__.py"]

[tool.pyright]
include = ["agents", "scripts", "docs"]
exclude = ["**/tests/**", "**/.venv/**", "**/.uv/**"]
extraPaths = ["scripts"]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnnecessaryIsInstance = false

[tool.mypy]
python_version = "3.10"
plugins = ["pydantic.mypy"]
strict = true
packages = ["agents", "scripts"]
ignore_missing_imports = true
warn_unused_ignores = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_decorators = true
show_error_codes = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.bandit]
targets = ["agents", "scripts", "docs/source"]
exclude_dirs = ["**/tests/**", "**/.venv/**", "**/.uv/**", "**/docs/generated/**"]

[tool.poe]
executor.type = "uv"

[tool.poe.tasks]
fmt = ["fmt-agents", "fmt-root"]
fmt-agents = "python scripts/run_tasks_in_agents_if_exists.py fmt"
fmt-root = "uv run ruff format scripts docs/source agents/*/docs/source"
format.ref = "fmt"

lint = ["lint-agents", "lint-root"]
lint-agents = "python scripts/run_tasks_in_agents_if_exists.py lint"
lint-root = "uv run ruff check scripts docs/source agents/*/docs/source"

pyright = ["pyright-agents", "pyright-root"]
pyright-agents = "python scripts/run_tasks_in_agents_if_exists.py pyright"
pyright-root = "uv run pyright"

mypy = ["mypy-agents", "mypy-root"]
mypy-agents = "python scripts/run_tasks_in_agents_if_exists.py mypy"
mypy-root = "uv run mypy --config-file pyproject.toml"

bandit = "uv run bandit -c pyproject.toml -r agents scripts docs/source"

test = "python scripts/run_tasks_in_agents_if_exists.py test"
markdown-code-lint = "uv run python scripts/check_md_code_blocks.py README.md docs/manual/*.md agents/**/README.md .github/instructions/*.md"
pre-commit-install = "uv run pre-commit install --install-hooks --overwrite"
install = "uv sync --all-packages --all-extras --dev -U --prerelease=if-necessary-or-explicit --no-group=docs"
docs = "uv run python scripts/generate_docs.py"
docs-install = "uv sync --all-packages --all-extras --dev -U --prerelease=if-necessary-or-explicit --group docs"
check = ["fmt", "lint", "pyright", "mypy", "bandit", "test", "markdown-code-lint"]
# Optional release/publish helpers (commented out by default)
# clean-dist-agents = "python scripts/run_tasks_in_agents_if_exists.py clean-dist"
# clean-dist-meta = "rm -rf dist"
# clean-dist = ["clean-dist-agents", "clean-dist-meta"]
# build-agents = "python scripts/run_tasks_in_agents_if_exists.py build"
# build-meta = "python -m flit build"
# build = ["build-agents", "build-meta"]
# publish = "uv publish"

# Setup and Virtual Environment
[tool.poe.tasks.venv]
cmd = "uv venv --clear --python $python"
args = [{ name = "python", default = "3.13", options = ['-p', '--python'] }]

[tool.poe.tasks.setup]
sequence = [
    { ref = "venv --python $python"},
    { ref = "install" },
    { ref = "pre-commit-install" }
]
args = [{ name = "python", default = "3.13", options = ['-p', '--python'] }]

# Pre-commit oriented tasks (lighter, diff-aware variants)
[tool.poe.tasks.pre-commit-markdown-code-lint]
cmd = "uv run python scripts/check_md_code_blocks.py ${files} --no-glob"
args = [{ name = "files", default = ".", positional = true, multiple = true }]

[tool.poe.tasks.pre-commit-pyright]
cmd = "uv run python scripts/run_tasks_in_changed_agents.py pyright ${files}"
args = [{ name = "files", default = ".", positional = true, multiple = true }]

[tool.poe.tasks.pre-commit-check]
sequence = [
    { ref = "fmt" },
    { ref = "lint" },
    { ref = "pre-commit-pyright ${files}" },
    { ref = "pre-commit-markdown-code-lint ${files}" },
]
args = [{ name = "files", default = ".", positional = true, multiple = true }]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[build-system]
requires = ["flit-core>=3.12.0,<4"]
build-backend = "flit_core.buildapi"
